# api_generation_hackathon

./: README
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  pyproject.toml
generate_api/1_building_from_spec/: 0_README.md  1_from_spec.py  1_person.json  1_person.yaml
generate_api/2_building_from_code/: 0_README.md  1_shift.py
generate_api/3_generating_specs/: 0_README.md  1_query_metadata.py
generate_api/4_generating_apis/: 0_README.md
generate_api/4_generating_apis/django/api/: admin.py  models.py  serializers.py  urls.py  views.py
generate_api/4_generating_apis/django/conf/: settings.py  urls.py
generate_api/4_generating_apis/django/generate/management/commands/: generate_admin.py  generate_serializers.py  generate_viewsets.py
generate_api/4_generating_apis/django/generate/templates/generate/: swagger.html
