[tool.poetry]
name = "api-generation-hackathon"
version = "0.1.0"
description = "Generating a large amounts of APIs from a datasource"
authors = ["Vito Minheere <vito@codebeez.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.7"
fastapi = "^0.101.1"
fastapi-code-generator = "^0.4.3"
uvicorn = "^0.23.2"
django = "^4.2.5"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"